Secrets API - CRUD
