# api/group/secrets/handlers.go
@@ -52,7 +52,7 @@ func GetSecretsHandler(c *gin.Context) {
 
 	errValidate := request.Validate(rqContext, Localizer)
 	if errValidate != nil {
-		log.Printf("Ошибка валидации данных тела запроса: %s", errValidate)
+		log.Printf("Error validating body of the request: %s", errValidate)
 		msg := Localizer.MustLocalize(&i18n.LocalizeConfig{DefaultMessage: &i18n.Message{ID: "RequestValidationError"}})
 		response.Errors = append(response.Errors, rqrs.Error{Message: msg, Description: errValidate.Error(), Code: 0})
 		c.JSON(http.StatusBadRequest, response)
@@ -65,21 +65,20 @@ func GetSecretsHandler(c *gin.Context) {
 	c.JSON(http.StatusOK, response)
 }
 
-// GetSecretByIDHandler
-// @Summary Getting secret by UID
-// @Description Getting secret by UID
-// @ID get-secret-by-id
+// UpdateSecretsHandler
+// @Summary Update secrets
+// @Description Update secrets
+// @ID update-secrets
 // @Tags Secrets
 // @Produce json
-// @Param ID path integer true "Secret unique identifier"
-// @Success 200 {object} GetSecretRS
+// @Success 200 {object} UpdateSecretsRS
 // @Failure 401 {string} string "Unauthorized"
 // @Failure 403 {string} string "Forbidden"
-// @Failure 400 {object} GetSecretRS
-// @Failure 404 {object} GetSecretRS
-// @Failure 500 {object} GetSecretRS
-// @Router /secrets/{UID}/ [get]
-func GetSecretByIDHandler(c *gin.Context) {
+// @Failure 400 {object} UpdateSecretsRS
+// @Failure 404 {object} UpdateSecretsRS
+// @Failure 500 {object} UpdateSecretsRS
+// @Router /secrets/ [patch]
+func UpdateSecretsHandler(c *gin.Context) {
 	rqContext := c.Request.Context()
 	SentryHub := sentry.GetHubFromContext(rqContext)
 	if SentryHub == nil {
@@ -90,25 +89,119 @@ func GetSecretByIDHandler(c *gin.Context) {
 	Language, _ := c.Get("Language")
 	Localizer := i18n.NewLocalizer(apiconfig.Settings.Bundle, Language.(string))
 
-	validationSpan := sentry.StartSpan(rqContext, "get.secret.by.id")
+	validationSpan := sentry.StartSpan(rqContext, "update.secrets")
 	validationSpan.Description = "rq.validate"
 
-	response := GetSecretRS{ResponseRS: rqrs.ResponseRS{Errors: []rqrs.Error{}}}
+	response := UpdateSecretsRS{ResponseListRS: rqrs.ResponseListRS{Errors: []rqrs.Error{}}}
 	var idParam string
 
 	errBindURI := c.ShouldBindUri(&idParam)
 	if errBindURI != nil {
 		msg := Localizer.MustLocalize(&i18n.LocalizeConfig{DefaultMessage: &i18n.Message{ID: "RequestURIMappingError"}})
-		response.ResponseRS.Errors = append(response.ResponseRS.Errors, rqrs.Error{Message: msg, Description: errBindURI.Error(), Code: 0})
+		response.ResponseListRS.Errors = append(response.ResponseListRS.Errors, rqrs.Error{Message: msg, Description: errBindURI.Error(), Code: 0})
 		c.JSON(http.StatusBadRequest, response)
 		return
 	}
 	validationSpan.Finish()
 
-	prepareSpan := sentry.StartSpan(rqContext, "get.secret.by.id")
+	prepareSpan := sentry.StartSpan(rqContext, "update.secrets")
 	prepareSpan.Description = "prepare"
 
-	// @TODO Implement retrieving secret by UID
+	// @TODO Implement updating a list of secrets
+
+	c.JSON(http.StatusOK, response)
+}
+
+// DeleteSecretsHandler
+// @Summary Delete secrets
+// @Description Delete secrets
+// @ID delete-secrets
+// @Tags Secrets
+// @Produce json
+// @Success 200 {object} DeleteSecretsRS
+// @Failure 401 {string} string "Unauthorized"
+// @Failure 403 {string} string "Forbidden"
+// @Failure 400 {object} DeleteSecretsRS
+// @Failure 404 {object} DeleteSecretsRS
+// @Failure 500 {object} DeleteSecretsRS
+// @Router /secrets/ [delete]
+func DeleteSecretsHandler(c *gin.Context) {
+	rqContext := c.Request.Context()
+	SentryHub := sentry.GetHubFromContext(rqContext)
+	if SentryHub == nil {
+		SentryHub = sentry.CurrentHub().Clone()
+		rqContext = sentry.SetHubOnContext(rqContext, SentryHub)
+	}
+
+	Language, _ := c.Get("Language")
+	Localizer := i18n.NewLocalizer(apiconfig.Settings.Bundle, Language.(string))
+
+	validationSpan := sentry.StartSpan(rqContext, "delete.secrets")
+	validationSpan.Description = "rq.validate"
+
+	response := DeleteSecretsRS{ResponseListRS: rqrs.ResponseListRS{Errors: []rqrs.Error{}}}
+	var idParam string
+
+	errBindURI := c.ShouldBindUri(&idParam)
+	if errBindURI != nil {
+		msg := Localizer.MustLocalize(&i18n.LocalizeConfig{DefaultMessage: &i18n.Message{ID: "RequestURIMappingError"}})
+		response.ResponseListRS.Errors = append(response.ResponseListRS.Errors, rqrs.Error{Message: msg, Description: errBindURI.Error(), Code: 0})
+		c.JSON(http.StatusBadRequest, response)
+		return
+	}
+	validationSpan.Finish()
+
+	prepareSpan := sentry.StartSpan(rqContext, "delete.secrets")
+	prepareSpan.Description = "prepare"
+
+	// @TODO Implement deleting a list of secrets
+
+	c.JSON(http.StatusOK, response)
+}
+
+// CreateSecretsHandler
+// @Summary Create secrets
+// @Description Create secrets
+// @ID create-secrets
+// @Tags Secrets
+// @Produce json
+// @Success 200 {object} CreateSecretsRS
+// @Failure 401 {string} string "Unauthorized"
+// @Failure 403 {string} string "Forbidden"
+// @Failure 400 {object} CreateSecretsRS
+// @Failure 404 {object} CreateSecretsRS
+// @Failure 500 {object} CreateSecretsRS
+// @Router /secrets/ [put]
+func CreateSecretsHandler(c *gin.Context) {
+	rqContext := c.Request.Context()
+	SentryHub := sentry.GetHubFromContext(rqContext)
+	if SentryHub == nil {
+		SentryHub = sentry.CurrentHub().Clone()
+		rqContext = sentry.SetHubOnContext(rqContext, SentryHub)
+	}
+
+	Language, _ := c.Get("Language")
+	Localizer := i18n.NewLocalizer(apiconfig.Settings.Bundle, Language.(string))
+
+	validationSpan := sentry.StartSpan(rqContext, "create.secrets")
+	validationSpan.Description = "rq.validate"
+
+	response := CreateSecretsRS{ResponseListRS: rqrs.ResponseListRS{Errors: []rqrs.Error{}}}
+	var idParam string
+
+	errBindURI := c.ShouldBindUri(&idParam)
+	if errBindURI != nil {
+		msg := Localizer.MustLocalize(&i18n.LocalizeConfig{DefaultMessage: &i18n.Message{ID: "RequestURIMappingError"}})
+		response.ResponseListRS.Errors = append(response.ResponseListRS.Errors, rqrs.Error{Message: msg, Description: errBindURI.Error(), Code: 0})
+		c.JSON(http.StatusBadRequest, response)
+		return
+	}
+	validationSpan.Finish()
+
+	prepareSpan := sentry.StartSpan(rqContext, "create.secrets")
+	prepareSpan.Description = "prepare"
+
+	// @TODO Implement creating a list of secrets
 
 	c.JSON(http.StatusOK, response)
 }
