# api/group/secrets/validators.go
@@ -3,18 +3,19 @@ package secrets
 import (
 	"context"
 	"github.com/nicksnyder/go-i18n/v2/i18n"
+	"github.com/pkg/errors"
 )
 
 func (rq GetSecretsRQ) Validate(ctx context.Context, Localizer *i18n.Localizer) error {
 	errPagination := rq.Pagination.Validate(ctx)
 	if errPagination != nil {
-		return errPagination
+		return errors.Wrap(errPagination, "Pagination validation failed")
 	}
 
 	for _, orderVal := range rq.Ordering {
 		errOrdering := orderVal.Validate(ctx, Localizer)
 		if errOrdering != nil {
-			return errOrdering
+			return errors.Wrap(errOrdering, "Order validation failed")
 		}
 	}
 
